# blaecktcpy

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml  test_data.csv  test_decode.py  test_timer.py
.github/workflows/: tests.yml
blaecktcpy/: __init__.py
docs/: api.md  hub.md  protocol.md
examples/: command_parser.py  csv_generator.py  csv_reader.py  datatype_test.py  sine_generator_basic.py  test_script.py
examples/arduino/FakeMasterWithSlaves/: FakeMasterWithSlaves.ino
examples/hub/: basic.py  computed_signal.py  local_only.py  mixed_sources.py  on_data_received.py  schema_change.py  signal_processing.py  stress_board.py  transform.py  treeview_test.py
examples/server/: command_parser.py  cosine.py  csv_generator.py  csv_reader.py  datatype_test.py  fake_blaeckserial.py  sine.py  timestamps.py
src/blaecktcpy/: __init__.py  _encoder.py  _http.py  _protocols.py  _server.py  _signal.py  _tcp.py
src/blaecktcpy/hub/: __init__.py  _decoder.py  _hub.py  _manager.py  _upstream.py
tests/: conftest.py  test_api_validation.py  test_async_reconnect.py  test_callbacks.py  test_client_identity.py  test_commands.py  test_data_frames.py  test_decoder.py  test_encoder.py  test_http.py  test_hub_features.py  test_hub_relay.py  test_interval.py  test_schema_edge_cases.py  test_schema_hash.py  test_server_misc.py  test_signal.py  test_signal_list.py  test_status_and_activate.py  test_timestamps.py  test_upstream.py
