[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blaecktcpy"
version = "1.0.0"
description = "Python implementation of the BlaeckTCP protocol — compatible with Loggbok"
authors = [
    { name = "Sebastian Strobl" }
]
requires-python = ">=3.6"
license = { text = "MIT" }
keywords = ["blaeck", "tcp", "loggbok", "logging", "arduino"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/sebaJoSt/BlaeckTCP"
